--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "App where users can post stories and view stories from other users",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node app.js",
+    "dev": "cross-env NODE_ENV=development nodemon app.js"
   },
   "author": "Dalton Pettus",
   "license": "MIT",
@@ -22,6 +23,7 @@
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.10"
   }
 }
