--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
+    "@types/node": "^22.15.17",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.10"
   }
